--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.thymeleaf.cache=false
 spring.http.multipart.max-file-size=10MB
 spring.http.multipart.max-request-size=10MB
 
+server.port=9999
 
 file.server.path = /temp/assets/
 file.client.path = /resources/assets/
